<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:gravity="center"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Overdraw">

    <TextView
        android:text="@string/destination_reached"
        android:layout_width="wrap_content"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:textColor="#7c0000"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/msg"
        android:textColor="#767676"
        android:layout_width="wrap_content"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/you_have_reached_your_destination"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/no"
            android:layout_width="@dimen/_80sdp"
            android:background="@drawable/button_bg"
            android:text="@string/no"
            android:visibility="gone"
            android:textColor="#fff"
            android:layout_height="@dimen/_30sdp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/yes"
            android:layout_width="@dimen/_80sdp"
            android:background="@drawable/pink_bg_btn"
            android:text="@string/ok"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="#fff"
            android:layout_height="@dimen/_30sdp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>


</LinearLayout>