<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context="smartagora.ethz.ch.uiActivities.QuestionsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:background="@color/cardview_light_background"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <ListView
            android:id="@+id/file_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:dividerHeight="@dimen/_10sdp"
            tools:ignore="NestedScrolling">


        </ListView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <Button
                android:id="@+id/ChooseJsonFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="12.40"
                android:background="@drawable/button_bg"
                android:onClick="chooseJsonFile"
                android:padding="10dp"
                android:layout_marginBottom="2dp"
                android:text="@string/add_files"
                android:textColor="#fff"
                tools:ignore="ButtonStyle,InefficientWeight,ObsoleteLayoutParam" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:padding="10dp"
                android:text="@string/sqlite"
                android:textColor="#fff"
                android:visibility="gone"
                tools:ignore="ButtonStyle,ObsoleteLayoutParam" />


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/button_bg"
            android:padding="@dimen/_10sdp"
            android:text="@string/sensor"
            android:textColor="#fff"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/button_bg"
            android:padding="@dimen/_10sdp"
            android:text="@string/batteryinformation"
            android:textColor="#fff"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/button_bg"
                android:text="@string/cancel"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/button_bg"
                android:text="@string/ok"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
