<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_weight="0.9">


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="smartagora.ethz.ch.uiActivities.HomeScreen" />


        <LinearLayout
            android:id="@+id/tempLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:background="@color/transparent"
                android:orientation="vertical"
                android:weightSum="4">

                <ImageView

                    android:id="@+id/transportToggleView"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"

                    android:src="@mipmap/walking"
                    android:contentDescription="@string/shows_transport_mean"
                    tools:ignore="InefficientWeight" />

                <LinearLayout
                    android:id="@+id/transportToggleLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView

                        android:id="@+id/car_mode"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:src="@mipmap/car"
                        android:contentDescription="@string/image_for_car_mode" />

                    <ImageView

                        android:id="@+id/train_mode"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:src="@mipmap/train"
                        android:contentDescription="@string/image_for_train_mode" />

                    <ImageView

                        android:id="@+id/cycle_mode"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:src="@mipmap/cycle"
                        android:contentDescription="@string/image_for_bicycle_mode" />

                    <ImageView

                        android:id="@+id/walking_mode"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:src="@mipmap/walking"
                        android:contentDescription="@string/image_for_walking_mode" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.kofigyan.stateprogressbar.StateProgressBar
                    android:id="@+id/your_state_progress_bar_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_50sdp"
                    app:spb_animateToCurrentProgressState="true"
                    app:spb_checkStateCompleted="true"
                    app:spb_currentStateDescriptionColor="#DB0082"
                    app:spb_maxStateNumber="four"
                    app:spb_stateBackgroundColor="#BDBDBD"
                    app:spb_stateDescriptionColor="#808080"
                    app:spb_stateForegroundColor="#DB0082"
                    app:spb_stateLineThickness="3dp"
                    app:spb_stateNumberBackgroundColor="#808080"
                    app:spb_stateNumberForegroundColor="#eeeeee"
                    app:spb_stateSize="30dp"
                    app:spb_stateTextSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="120dp"
            android:background="@color/transparent"
            android:padding="0dp"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/dias_show"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:src="@mipmap/walking"
                android:text="@string/dias"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible"
                android:contentDescription="@string/image_for_showing_personal_value" />


            <TextView
                android:id="@+id/dias_aggregated_tv"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:layout_marginStart="2dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="55dp"
                android:background="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/personal_default_value"

                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/dias_show1"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="50dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:src="@mipmap/group"
                android:text="@string/dias"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible"
                android:contentDescription="@string/image_for_group_aggregated_value" />

            <TextView
                android:id="@+id/dias_aggregated_tv1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_2sdp"
                android:layout_below="@id/dias_show1"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="2.5dp"
                android:background="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/dias_group_default_value"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:visibility="visible" />

        </RelativeLayout>

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame"
        android:layout_weight="0"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/background_navigation_item_color"
        app:itemTextColor="@drawable/background_navigation_item_color"
        app:menu="@menu/load_trips_menu"

        tools:ignore="ObsoleteLayoutParam" />


</LinearLayout>