<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="smartagora.ethz.ch.uiActivities.ProjectsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="3dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        tools:ignore="ScrollViewSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="@dimen/_6sdp"
            android:text="@string/select_projects"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:layout_marginBottom="10dp"/>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:dividerHeight="@dimen/_1sdp"
            android:descendantFocusability="blocksDescendants"
            tools:ignore="NestedScrolling">


        </ListView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/button_bg"
                android:text="@string/cancel"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/button_bg"
                android:text="@string/ok"
                android:textColor="#fff"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
